# kniopass

./: README.md  pyproject.toml  requirements.txt  setup.py
kniopass/: __init__.py  __main__.py  cli.py  encryptedfile.py  keepass_cvs_import.py  kniopass.py
test/: test_kniopass.py
